# swagger.yaml
@@ -1924,6 +1924,82 @@ paths:
         204:
           description: Association deleted
 
+  /lhv:
+    post:
+      summary: Create organisation association for lhv
+      tags:
+        - Associations
+      consumes:
+        - application/vnd.api+json
+        - application/json
+      parameters:
+        - name: creation request
+          in: body
+          schema:
+            $ref: "#/definitions/LhvAssociationCreation"
+      responses:
+        201:
+          description: creation response
+          schema:
+            $ref: "#/definitions/LhvAssociationCreationResponse"
+    get:
+      summary: List all organisation lhv associations
+      tags:
+        - Associations
+      parameters:
+        - name: filter[organisation_id]
+          in: query
+          description: Organisation id
+          required: false
+          type: array
+          items:
+            type: string
+            format: uuid
+      responses:
+        200:
+          description: List of associations
+          schema:
+            $ref: "#/definitions/LhvAssociationDetailsListResponse"
+
+  /lhv/{id}:
+    get:
+      summary: Fetch organisation lhv association
+      tags:
+        - Associations
+      parameters:
+        - name: id
+          in: path
+          description: Association Id
+          required: true
+          type: string
+          format: uuid
+      responses:
+        200:
+          description: Associations details
+          schema:
+            $ref: "#/definitions/LhvAssociationDetailsResponse"
+    delete:
+      summary: Delete organisation lhv association
+      tags:
+        - Associations
+      parameters:
+        - name: id
+          in: path
+          description: Association Id
+          required: true
+          type: string
+          format: uuid
+        - name: version
+          in: query
+          description: Version
+          required: true
+          type: integer
+          minimum: 0
+      responses:
+        204:
+          description: Association deleted
+
+
   /sepasct:
     post:
       summary: Create organisation association for sepa sct
@@ -4931,7 +5007,79 @@ definitions:
       links:
         $ref: '#/definitions/Links'
 
-# paymentapi - start
+  LhvAssociation:
+    type: object
+    properties:
+      type:
+        type: string
+      id:
+        type: string
+        format: uuid
+      version:
+        type: integer
+        minimum: 0
+      organisation_id:
+        type: string
+        format: uuid
+      attributes:
+        $ref: "#/definitions/LhvAssociationAttributes"
+
+  NewLhvAssociation:
+    type: object
+    properties:
+      type:
+        type: string
+      id:
+        type: string
+        format: uuid
+      version:
+        type: integer
+        minimum: 0
+      organisation_id:
+        type: string
+        format: uuid
+      attributes:
+        $ref: "#/definitions/LhvAssociationAttributes"
+
+  LhvAssociationAttributes:
+    type: object
+    properties:
+      bic:
+        type: string
+
+  LhvAssociationCreation:
+    type: object
+    properties:
+      data:
+        $ref: '#/definitions/NewLhvAssociation'
+
+  LhvAssociationCreationResponse:
+    type: object
+    properties:
+      data:
+        $ref: '#/definitions/LhvAssociation'
+      links:
+        $ref: '#/definitions/Links'
+
+  LhvAssociationDetailsResponse:
+    type: object
+    properties:
+      data:
+        $ref: '#/definitions/LhvAssociation'
+      links:
+        $ref: '#/definitions/Links'
+
+  LhvAssociationDetailsListResponse:
+    type: object
+    properties:
+      data:
+        type: array
+        items:
+          $ref: '#/definitions/LhvAssociation'
+      links:
+        $ref: '#/definitions/Links'
+
+  # paymentapi - start
 
   Payment:
     type: object
